deployment/dev/green/dev-register-app-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-app-green
  namespace: dev
  labels:
    app: register-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: register-app-green
  template:
    metadata:
      labels:
        app: register-app-green
    spec:
      containers:
      - name: register-app-green
        image: 153728362522.dkr.ecr.us-east-1.amazonaws.com/register-app:0.2
        imagePullPolicy: Always
        ports:
          - name: web
            containerPort: 5000
      imagePullSecrets:
          - name: regcred
