deployment/dev/green/dev-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-app-green
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: register-app-green
