deployment/dev/green/dev-green-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "5000"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:153728362522:certificate/39dc644c-b7b7-4853-b9fc-9fb7126b7ac5"
    kubernetes.io/ingress.class: alb
  labels:
    app: register-app-green
  name: register-app-ingress-green
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: register-app-green
            port:
              number: 5000
        path: /*
        pathType: ImplementationSpecific
